course/dummy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummysite-svc
  namespace: dumdum
spec:
  type: ClusterIP
  selector:
    app: dummysite
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
