course/dummy/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dummysite-ingress
  namespace: dumdum
spec:
  rules:
  - http:
      paths:
      - path: /dummysite
        backend:
          serviceName: dummysite-svc
          servicePort: 80
